--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body {
 .about_section h1, h2 {
     color: #5e6f3b;
 }
+.green {
+    font-size: 20px;
+}
 
 .container h1.text-center, .shadow {
     color: #5e6f3b;
