--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,17 @@ body {
 .about_section h1, h2 {
     color: #5e6f3b;
 }
+
+.leaf-list li {
+    list-style-type: none;
+    background-image: url('../images/tea-leaves.png');
+    background-repeat: no-repeat;
+    background-size: 25px 25px;  /* This is the size of the leaf image */
+    background-position: left top;
+    padding-left: 40px;  /* Space between the bullet and text */
+    margin-bottom: 10px; /* Space between paragraphs */
+}
+ 
 .green {
     font-size: 20px;
 }
@@ -80,7 +91,19 @@ body {
     background-color: #5a6268;
     border-color: #545b62;
 }
-
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 2rem 0;
+ }
+ .form-block {
+    background: white;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+ }
 .master-container {
     justify-content: center;
     align-items: center;
